--- a/Stores.page
+++ b/Stores.page
@@ -5,3 +5,6 @@ One of the key elements of the blockade is having enough supplies; where do thes
 - [Where to get supplies]()
 - [Deficiency of supplies]()
 - [Delays in getting supplies]()
+- 
+
+The orders to the commodores indicate that naval officers should never directly interact with foreign port officers to get supplies, if there is already an American agent in that port (BW2:29).
