--- a/Science.page
+++ b/Science.page
@@ -11,6 +11,7 @@
 - BW1:344: [John Adams]() to [Hamouda Pasha](), 15 January 1800: "With respect to the time within which you required that the stipulated stores should be delivered, I have charged Mr Eaton to explain to you the impossibility of a compliance: and will here only observe that of the six months proposed, four had elapsed when your letter and the Consuls dispatches arrived: And then a pestilence raging in some of our principal cities by causing the inhabitants to flee into the country & suspending business, rendered delays unavoidable."
 
 ## Disease in the navy
+- BW2:34: Surgeons' orders include keeping men on board ship if at all possible, keeping careful records of the progress of their sicknesses, and visiting his patients at least twice a day
 - BW1:570: [Richard Dale]() leaves the blockade of Tripoli early because he has 152 men on the sick list
     - First Lieutenant [Newton Keene]() records that this sicknes was "some kind of enfluensa" and that only 2 or 3 men died (BW1:584) 
 - BW1:618: [William Bainbridge]() records that "many of our people being sick, find the ship works heavy, for want of their assistance"--somewhat surprisingly they still got pratique immediately at Gibraltar the next day (10 November 1801)
