--- a/Convoy.page
+++ b/Convoy.page
@@ -3,7 +3,10 @@ One of the important but boring duties of the American squadron was to convoy Am
 "It was requisite That the Essex should convoy out of this sea. The american Vessels so long detained on acct of the Threatenings of Tripoli and The Snarlings of Algiers--& murmors of Tunis." --[Richard O'Brien]() to Secretary of State, September 26, 1801 (BW1:582)
 
 ## System
+Regulations about convoy, BW2:39-40
+
 Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American convoys were on the smaller side, as the Americans didn't have enough ships to support the larger ones.
+
 - 1801: [USS Philadelphia]() convoys 10 American ships and 5 Swedish ships from Malaga to Alicant, Leghorn, and Naples (BW1:632)
 - 1801: Circular warns ships against traveling in the Adriatic without convoy
 
