--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -34,6 +34,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
     - BW1:627: Continued agreeable relations between the *[USS Essex]()* and the *Thetis*, 30 November 1801
 - BW2:20: [Richard Dale]() expects to consult with Admiral [Soderstrom]() about the best way to jointly protect the two nations' commerce, 13 January 1802
     - BW2:28: Soderstrom reports that he has ordered a frigate to Tripoli and is also going there himself; he has put two frigates on convoy duty at Malaga (25 January 1802)
+    - BW2:46: Dale writes to Soderstrom that he has ordered the [USS *Boston*]() to act in conjunction with the Swedes off Tripoli, and he offers some advice to Soderstrom about how an attack might be made on the port, 2 February 1802 
 
 ### Denmark
 - 28 August 1801: Danish commodore will not swap information with [Richard Dale](), though [Nicholas Nissen]() has been a help to the squadron (BW1:562)
