--- a/Front Page.page
+++ b/Front Page.page
@@ -17,6 +17,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Captivity]()
 - [Characteristics of Barbary ships]()
 - [Communications]()
+- [Conduct of naval ships]()
 - [Engagements with Tripoli]()
 - [Gender]()
 - [Honor]()
