--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -4,4 +4,4 @@ On paper the regulations concerning how ships and their crews ought to behave we
 - Don't lie about where you've been. (cf. [Daniel McNeill]())
 
 - Don't use a public ship for private purposes.
-    - BW2:42: [Secretary of the Navy]() roundly condemns a packet sent to the Mediterranean with supplies for the squadron, who instead took on private cargo as well, delaying the delivery of supplies to the squadron and forcing them to buy from the British, 28 January 1802
+    - BW2:42: [Secretary of the Navy]() roundly condemns a packet sent to the Mediterranean with supplies for the squadron, who instead took on private cargo as well, delaying the delivery of supplies to the squadron and forcing them to buy from the British, 28 January 1802---"the whole cargo was brought into jeopardy and the integrity of the commander of the squadron, & indeed of the government of the U. S. itself might have been called in question." 
