--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -2,6 +2,8 @@ On paper the regulations concerning how ships and their crews ought to behave we
 
 ### Rules (perhaps unspoken but clear)
 - Don't lie about where you've been. (cf. [Daniel McNeill](), BW2:44)
+- Don't take non-crew members away, especially against their will 
+    - [Daniel McNeill](), BW2:45: [Richard Dale]() writes him, "Permit me to impress on your mind the necessity there is in keeping up a good understanding mth the Commanders of the Ships that you have to act in conjunction with you will always keep in view (I hope) the Honor of your Country and your Brother Officers"
 
 - Don't use a public ship for private purposes.
     - BW2:42: [Secretary of the Navy]() roundly condemns a packet sent to the Mediterranean with supplies for the squadron, who instead took on private cargo as well, delaying the delivery of supplies to the squadron and forcing them to buy from the British, 28 January 1802---"the whole cargo was brought into jeopardy and the integrity of the commander of the squadron, & indeed of the government of the U. S. itself might have been called in question." 
