--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -26,7 +26,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 
 
 ## Scandinavia
-### Sweden
+- [Sweden]()
 - BW1:576: [James Leander Cathcart]() discourages a coalition with Sweden, on the basis that he does not want to share the glory and honor of setting an example with the Barbary states (see [Honor]()), 17 September 1801
     - BW1:599: Despite Cathcart's objections, N. [Frumerie]() writes to [William Eaton]() that the Swedes have been ordered by the king to cooperate with the Americans against Tripoli and so a squadron of 3 frigates and a cutter brig are coming to the Med for that purpose, as well as providing convoy duty for American vessels, 14 October 1801
     - BW1:637: Eaton too seems to caution against a Swedish alliance: "what American can cheerfully admit the idea that the United States will think it proper to divide with any nation whatever the honor and the advantages of chastising Tripoli: The object itself does not seem to require such a parade" (13 December 1801) 
