--- a/Sweden.page
+++ b/Sweden.page
@@ -1,8 +1,8 @@
 - BW1:576: [James Leander Cathcart]() discourages a coalition with Sweden, on the basis that he does not want to share the glory and honor of setting an example with the Barbary states (see Honor), 17 September 1801
-    - BW1:599: Despite Cathcart’s objections, N. Frumerie writes to William Eaton that the Swedes have been ordered by the king to cooperate with the Americans against Tripoli and so a squadron of 3 frigates and a cutter brig are coming to the Med for that purpose, as well as providing convoy duty for American vessels, 14 October 1801
+    - BW1:599: Despite Cathcart’s objections, N. [Frumerie]() writes to [William Eaton]() that the Swedes have been ordered by the king to cooperate with the Americans against Tripoli and so a squadron of 3 frigates and a cutter brig are coming to the Med for that purpose, as well as providing convoy duty for American vessels, 14 October 1801
 - BW1:637: Eaton too seems to caution against a Swedish alliance: “what American can cheerfully admit the idea that the United States will think it proper to divide with any nation whatever the honor and the advantages of chastising Tripoli: The object itself does not seem to require such a parade” (13 December 1801)
-- BW1:626: Relations were friendly enough that Lt. Stephen Decatur went on board the Swedish frigate Thetis, 27 November 1801
-- BW1:627: Continued agreeable relations between the USS Essex and the Thetis, 30 November 1801
-- BW2:20: Richard Dale expects to consult with Admiral Soderstrom about the best way to jointly protect the two nations’ commerce, 13 January 1802
+- BW1:626: Relations were friendly enough that Lt. [Stephen Decatur]() went on board the Swedish frigate [Thetis](), 27 November 1801
+- BW1:627: Continued agreeable relations between the [USS Essex]() and the Thetis, 30 November 1801
+- BW2:20: [Richard Dale]() expects to consult with Admiral [Soderstrom]() about the best way to jointly protect the two nations’ commerce, 13 January 1802
 - BW2:28: Soderstrom reports that he has ordered a frigate to Tripoli and is also going there himself; he has put two frigates on convoy duty at Malaga (25 January 1802)
 - BW2:46: Dale writes to Soderstrom that he has ordered the USS Boston to act in conjunction with the Swedes off Tripoli, and he offers some advice to Soderstrom about how an attack might be made on the port, 2 February 1802
