--- a/Society.page
+++ b/Society.page
@@ -1,5 +1,9 @@
 Cultivating relationships with other nations' diplomats, naval officers, and civilians was an important part of the navy's service in the Mediterranean. Given that the two major players in the Mediterranean, the British and the French, had only uneasy truces with the United States, these personal relationships took on political significance. 
 
+# Image
+Given that the Americans instinctively felt themselves to be a lesser power, but wanted to be perceived as on par with the greater powers, image was very important to them.
+- BW2:47: Marine Lt. [John R. Fenwick]() defends his spending extra money on the marines' clothing by stating that he was "desirous to ... render as respectable as possible in the opinion of the number of Foreigners who croud on board of the American Frigates, whenever they go into Port" (3 February 1802)
+
 # Disputes
 ## Disputes over seamen
 A frequent refrain of disputes between the United States and other nations, specifically Britain, was the nationality of the sailors on board U.S. navy vessels.
