--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -1,3 +1,8 @@
+### Negotiations with Congress
+- BW2:49: Secretary of the Navy writes to [Samuel L. Mitchell]() about the problem of the smallness of the naval food ration, suggesting that Congress amend the ration to provide more meat and vegetables (see also [Stores]())
+
+
+### Uncertainty and ambiguity
 One of the major difficulties the navy faced in the Mediterranean was the fact that their orders came from so far away, and the situation in the Barbary States changed so quickly. As a result of this distance, commanders were given a remarkable amount of latitude in determining their own strategy.
 
 - BW1:588: [Secretary of the Navy]() to [Daniel McNeill](), 1 October 1801: "Not knowing whether you may find the Barbary powers in a State of hostility with us or not, I cannot here prescribe the duration of your  Cruise. If you should find Captain Dale, you will obey his Instructions on this Subject: otherwise you must determine for yourself, considering, should it be indispensably necessary that you have liberty to stay till the latest period for which your Crew is entered, which however, I cannot suppose will be necessary." 
