necessity of convoy

--- a/Convoy.page
+++ b/Convoy.page
@@ -22,4 +22,7 @@ Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American
     - Be careful where you anchor because of bad winter weather
     - Write to upcoming consuls asking them to have any ships wishing convoy ready to go when he arrives
 - Lt. [John Shaw]() had to write to the prime minister of the Two Sicilies to ask whether a ship that had been detained by that government would be available to sail with his convoy due to leave at the first fair wind, 7 January 1802 (BW2:14)
-    - In the end, Shaw said that if the ship would not be released in time for the convoy, which was the last of the season, the ship and its cargo would have to be abandoned (and the USA would be on the hook for the damages) (BW2:22)
+    - In the end, Shaw said that if the ship would not be released in time for the convoy, which was the last of the season, the ship and its cargo would have to be abandoned (and the USA would be on the hook for the damages) (BW2:22)  
+
+## Benefits/necessity of convoy
+- BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Essex*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
