Congress makes a law

--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -1,6 +1,6 @@
-### Negotiations with Congress
+### Congress
 - BW2:49: Secretary of the Navy writes to [Samuel L. Mitchell]() about the problem of the smallness of the naval food ration, suggesting that Congress amend the ration to provide more meat and vegetables (see also [Stores]())
-
+- BW2:51-52: After six months of being at war with Tripoli, Congress enacts a law to allow the navy and selected private ships to take Tripolitan prizes, 6 February 1802
 
 ### Uncertainty and ambiguity
 One of the major difficulties the navy faced in the Mediterranean was the fact that their orders came from so far away, and the situation in the Barbary States changed so quickly. As a result of this distance, commanders were given a remarkable amount of latitude in determining their own strategy.
