--- a/Convoy.page
+++ b/Convoy.page
@@ -25,4 +25,4 @@ Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American
     - In the end, Shaw said that if the ship would not be released in time for the convoy, which was the last of the season, the ship and its cargo would have to be abandoned (and the USA would be on the hook for the damages) (BW2:22)  
 
 ## Benefits/necessity of convoy
-- BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Essex*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
+- BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Philadelphia*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
