--- a/Sweden.page
+++ b/Sweden.page
@@ -6,3 +6,4 @@
 - BW2:20: [Richard Dale]() expects to consult with Admiral [Soderstrom]() about the best way to jointly protect the two nations’ commerce, 13 January 1802
 - BW2:28: Soderstrom reports that he has ordered a frigate to Tripoli and is also going there himself; he has put two frigates on convoy duty at Malaga (25 January 1802)
 - BW2:46: Dale writes to Soderstrom that he has ordered the USS Boston to act in conjunction with the Swedes off Tripoli, and he offers some advice to Soderstrom about how an attack might be made on the port, 2 February 1802
+    - Note: Dale does not say that the USA will participate in an attack, as he has not been given orders that allow him to attack a port (BW2:54)
