--- a/USS Enterprise.page
+++ b/USS Enterprise.page
@@ -11,3 +11,4 @@ Schooner
 - Ordered to Malta to pick up convoy vessels for Gibraltar, 2 September 1801 (BW1:568)
 - Ordered to Algiers to deliver letters to [Richard O'Brien]() and then to Gibraltar, 21 September 1801 (BW1:577)
 - Ordered to Baltimore to bring dispatches back to the USA, 3 October 1801 (BW1:592)
+- Ordered back to the Mediterranean, 8 February 1802 (BW2:55)
