--- a/Convoy.page
+++ b/Convoy.page
@@ -23,6 +23,7 @@ Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American
     - Write to upcoming consuls asking them to have any ships wishing convoy ready to go when he arrives
 - Lt. [John Shaw]() had to write to the prime minister of the Two Sicilies to ask whether a ship that had been detained by that government would be available to sail with his convoy due to leave at the first fair wind, 7 January 1802 (BW2:14)
     - In the end, Shaw said that if the ship would not be released in time for the convoy, which was the last of the season, the ship and its cargo would have to be abandoned (and the USA would be on the hook for the damages) (BW2:22)  
+- [John Shaw]() arrives at Leghorn to find that almost all the commercial ships had already sailed without waiting for him to convoy them, despite [Richard Dale]()'s warning that Tripolitan cruisers were out; the 3 that did stay for the convoy wouldn't keep up, so Shaw just let them go (BW2:57), 9 February 1802
 
 ## Benefits/necessity of convoy
 - BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Philadelphia*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
