--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -1,6 +1,6 @@
 The navy needed to know where they could reasonably expect a favorable reception among ports in the Mediterranean. 
 
-# Cruise 1
+
 - "It is expected that the Port of Gibraltar will be open to your squadron. It is not doubted but that you will be received with hospitality & friendship in the Spanish Ports of Carthagena, Barcelona & the French Port of Toulon - at Leghorn & Naples, Palermo & Syracuse - Nor is it conceived that there will be any obstacle made to your entering the Ports of Malta, now in possession of the British. Letters will be written on this subject to our several ministers & to our consuls in the Mediterranean, & other convenient Ports, to enable them to give proper explanations, & to enjoin on them the attentions & Offices they may be able to render the expedition" (BW1:468)
 
 - 29 June 1801: Hailed British fleet near Cadiz with proper ceremony (BW1:495)
@@ -47,3 +47,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 ## Great Britain
 - Mahon: Governor of Mahon assures [Richard Dale]() that if there were corsairs fitting out at Mahon to capture Americans, he would certainly put a stop to it, and that he would ensure that a ship being built for the Bey of Tunis was not actually for Tripoli (BW1:634)
 - Malta: [Samuel Barron]() receives a favorable reception from [Lord Keith]() and the British officers at Malta
+- 
+
+## Naples
+- Lt. [John Shaw]() reports that Naples wants to make a treaty with the USA, and that the governor of Naples has given orders to accommodate the American navy in any way possible, 9 February 1802 (BW2:57)
