--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -20,3 +20,10 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW1:644: [USS *Essex*]() gets vegetables from shore at Algeciras, 21 December 1801
 - BW2:24: [Richard Dale]() suggests that the [USS *Philadelphia*]() stop for supplies at Leghorn before coming back to the USA, 18 January 1802
 - BW2:26 Dale says that [Daniel McNeill]() should be able to get supplies from the British agent (uncertain at what port), 18 January 1802
+- BW2:59: [USS *Essex*]() takes on at Gibraltar, 9 February 1802:
+    Forty Barrels of Beef
+    Thirty five barrels of Pork
+    Fifteen Barrels of Flour
+    One hundred and Seventy Barrels of bread
+    Twenty five Bags of Peas
+    One I'lerce of Rice
