--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -5,7 +5,13 @@ One of the constant questions for the squadron was whether to get supplies from 
     - BW1:594-95: *American Packet* captured by Spanish privateers and brought to Algeciras, 5 October 1801; she turns out to have been carrying some private cargo as well (which was a violation of the blockade? [Richard Dale]() seems to think this was a problem and an ethical violation; not quite sure why).
     - BW1:596: [Richard Dale]() asks the governor of Algeciras to release the *American Packet* to him so he can make the [USS President]() ready for sea, reminding him that Dale had previously told the governor that this store ship was coming, and also asking for assistance in watering the President
     - BW1:606: Dale is not pleased with the quality of supplies in the ship: "I cannot say what is the reason there was no Butter, Cheese, Rum, Mollasses, or Candles sent out in the store ship. - the Bread that was sent is full of weevil." 
-
+- BW2:59: [USS *Essex*]() takes on at Gibraltar, 9 February 1802, from a store ship just arrived from Baltimore:
+    - Forty Barrels of Beef
+    - Thirty five barrels of Pork
+    - Fifteen Barrels of Flour
+    - One hundred and Seventy Barrels of bread
+    - Twenty five Bags of Peas
+    - One Tierce of Rice
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
@@ -20,10 +26,3 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW1:644: [USS *Essex*]() gets vegetables from shore at Algeciras, 21 December 1801
 - BW2:24: [Richard Dale]() suggests that the [USS *Philadelphia*]() stop for supplies at Leghorn before coming back to the USA, 18 January 1802
 - BW2:26 Dale says that [Daniel McNeill]() should be able to get supplies from the British agent (uncertain at what port), 18 January 1802
-- BW2:59: [USS *Essex*]() takes on at Gibraltar, 9 February 1802:
-    - Forty Barrels of Beef
-    - Thirty five barrels of Pork
-    - Fifteen Barrels of Flour
-    - One hundred and Seventy Barrels of bread
-    - Twenty five Bags of Peas
-    - One Tierce of Rice
