--- a/Front Page.page
+++ b/Front Page.page
@@ -22,6 +22,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Engagements with Tripoli]()
 - [Gender]()
 - [Honor]()
+- [International law]()
 - [Negotiation strategies]()
 - [Perceptions of people in the Mediterranean]()
 - [Physical accidents to ships or persons]()
