--- a/Convoy.page
+++ b/Convoy.page
@@ -10,6 +10,8 @@ Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American
 - 1801: [USS Philadelphia]() convoys 10 American ships and 5 Swedish ships from Malaga to Alicant, Leghorn, and Naples (BW1:632)
 - 1801: Circular warns ships against traveling in the Adriatic without convoy
 
+After Congress gives permission to capture and make prize of Tripolitan ships, the Secretary of the Navy again reminds the navy that they still have a duty to convoy, and specifically to convoy as large a group as possible at a time (BW2:51)
+
 ## Irritations and delays
 ### Lack of ships to perform duty
 - BW1:593: [Richard Dale]() to [William Kirkpatrick](): "it is my wish and Intention to give protection to all American Vessels, Either bound up the Mediterranean or down, as much, as in my Power lays, but the Commanders must have patience, I have to observe to you there is only three Ships of War in those seas at present belonging to the United States, one of them must be kept in or about this place, one off and about Tripoli so you see there is only one to go on the convoy Business."
