records of convoy

--- a/Convoy.page
+++ b/Convoy.page
@@ -29,3 +29,7 @@ After Congress gives permission to capture and make prize of Tripolitan ships, t
 
 ## Benefits/necessity of convoy
 - BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Philadelphia*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
+
+
+## Records of convoy
+- BW2:65: [William Bainbridge]() records taking 11 vessels through the Straits of Gibraltar, 23 February 1802
