--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -3,3 +3,7 @@ Naval officers often gave clues about how they perceived their enemies and even 
 # Barbary 
 ## Cowardly
 - [John R. Fenwick](), 3 February 1802: "none of our Vessels as yet have been taken, & whilst the Dread of the Americans exists, the pusillanimity of these people will prevent them leaving their Ports" (BW2:47)
+- 
+
+## Polite
+- [William Bainbridge]() comments that the governor of Tangier received them "with civility & a degree of Moorish politeness" (BW2:65, 25 February 1802)
