Sweden and Barbary

--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -12,3 +12,6 @@ Passports were a sticking point between the USA and all of the Barbary regencies
     - O'Brien did not like this; he wanted to show "him and his Ministry both Turkish and Jewish ... that we finally would make force to be our passport." (BW1:616, 8 Nov 1801)
     - 
 - [Richard O'Brien]() complains to the Secretary of State that the passports issued to American merchants are defective, because their parts don't match the part the Algerian corsairs have; other nations with this problem have had vessels' cargo condemned (25 November 1801, BW1:625)
+
+## Other nations' relations with the Barbary states
+- BW2:67: [Nicholas Nissen]() expresses surprise at how the Swedish ships have taken hostile action against Tripoli while they are still technically at peace with Tripoli, 21 April 1802
