--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -15,3 +15,6 @@ Passports were a sticking point between the USA and all of the Barbary regencies
 
 ## Other nations' relations with the Barbary states
 - BW2:67: [Nicholas Nissen]() expresses surprise at how the Swedish ships have taken hostile action against Tripoli while they are still technically at peace with Tripoli, 21 April 1802
+    - Nissen further suggests that Sweden has asked France to be mediator for them with the Barbary states, but thinks it will be a difficult negotiation because of the cavalier attitude of the Swedish navy toward attacking Tunisian ships
+    - 22 April: Negotiations, though secret, appear to be broken down between Sweden, the French mediator, and the bashaw
+    - 22 April: the bashaw seems to be arming for a fight---Nissen thinks he fears something more formidable than Sweden or the USA
