--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -47,7 +47,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 ## Great Britain
 - Mahon: Governor of Mahon assures [Richard Dale]() that if there were corsairs fitting out at Mahon to capture Americans, he would certainly put a stop to it, and that he would ensure that a ship being built for the Bey of Tunis was not actually for Tripoli (BW1:634)
 - Malta: [Samuel Barron]() receives a favorable reception from [Lord Keith]() and the British officers at Malta
-- 
+- Gibraltar: [William Bainbridge]() and [Richard Dale]() visit Sir [James Saumarez](), 27 February 1802 (BW2:68)
 
 ## Naples
 - Lt. [John Shaw]() reports that Naples wants to make a treaty with the USA, and that the governor of Naples has given orders to accommodate the American navy in any way possible, 9 February 1802 (BW2:57)
