--- a/Characteristics of Barbary ships.page
+++ b/Characteristics of Barbary ships.page
@@ -1,4 +1,10 @@
 # Acquisition
+- [Richard O'Brien]() makes a list of the Algerine force (15 vessels) and where the ships came from (BW2:71, 1 March and 20 May 1802):
+    - 5 from Algiers
+    - 5 from the USA
+    - 3 from Greece
+    - 2 unidentified
+
 
 # Manpower
 - Often manned by European dissidents and expatriates
