--- a/Characteristics of Barbary ships.page
+++ b/Characteristics of Barbary ships.page
@@ -9,3 +9,4 @@
 # Manpower
 - Often manned by European dissidents and expatriates
     - "I Suspect many Vagabonds will enter that Service [cruising against American ships] for want of employment in the Privateering line" (BW1:633)
+- In Richard O'Brien's list, he notes the captains of the Algerine vessels: only 3 Algerine; the rest Levantine (BW2:71)
