--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -7,3 +7,19 @@ On paper the regulations concerning how ships and their crews ought to behave we
 
 - Don't use a public ship for private purposes.
     - BW2:42: [Secretary of the Navy]() roundly condemns a packet sent to the Mediterranean with supplies for the squadron, who instead took on private cargo as well, delaying the delivery of supplies to the squadron and forcing them to buy from the British, 28 January 1802---"the whole cargo was brought into jeopardy and the integrity of the commander of the squadron, & indeed of the government of the U. S. itself might have been called in question." 
+
+
+### Guidelines
+
+These guidelines aren't quite "rules," but they're strong recommendations about how naval ships should conduct themselves in front of the Barbary States.
+
+- Hoist the American flag to indicate that they want to speak to the consul
+- Do not anchor until the consul is on his way 
+- After you anchor, salute the fortifications with the same number of guns as it saluted you with
+- Always be ready to sail or clear for action
+- Ask the consul if there are any contagious diseases in Algiers
+- The consul comes aboard and lets the captain know when he can see the dey or ministers
+- The rowers of the consular boat should not speak to any Americans, and the American sailors should not speak to any Algerines, in order to avoid misrepresentations and confusion
+- If any runaway slaves should get on board the ship, they must be returned and the consul informed
+- Every salute, which is given each time the consul or the captain goes ashore, costs the USA 76 dollars (same as for Swedish, Danish, or Dutch; British and French cost 60 dollrs); every time the consul comes in an Algerine boat he pays 8 dollars
+- (from [Richard O'Brien](), BW2:72-73)
