--- a/Convoy.page
+++ b/Convoy.page
@@ -26,6 +26,7 @@ After Congress gives permission to capture and make prize of Tripolitan ships, t
 - Lt. [John Shaw]() had to write to the prime minister of the Two Sicilies to ask whether a ship that had been detained by that government would be available to sail with his convoy due to leave at the first fair wind, 7 January 1802 (BW2:14)
     - In the end, Shaw said that if the ship would not be released in time for the convoy, which was the last of the season, the ship and its cargo would have to be abandoned (and the USA would be on the hook for the damages) (BW2:22)  
 - [John Shaw]() arrives at Leghorn to find that almost all the commercial ships had already sailed without waiting for him to convoy them, despite [Richard Dale]()'s warning that Tripolitan cruisers were out; the 3 that did stay for the convoy wouldn't keep up, so Shaw just let them go (BW2:57), 9 February 1802
+    - Shaw later writes: "I should not be the least surprised if -- some capture -- was maid -- as our American Merchant Vessles is running in all directions -- with out the smallest protection. (In fact Generally speaking, the[y] pay but very little attention to Convoy I apprehend the[y] will repent -- when its to late" (BW2:76, 2 March 1802)
 
 ## Benefits/necessity of convoy
 - BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Philadelphia*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
