--- a/Convoy.page
+++ b/Convoy.page
@@ -34,3 +34,4 @@ After Congress gives permission to capture and make prize of Tripolitan ships, t
 
 ## Records of convoy
 - BW2:65: [William Bainbridge]() records taking 11 vessels through the Straits of Gibraltar, 23 February 1802
+- BW2:78: [USS George Washington]() took vessels from Leghorn to Marseilles, February 1802
