weather at New Castle

--- a/Weather.page
+++ b/Weather.page
@@ -4,3 +4,5 @@ Weather was a significant factor in whether or not American naval vessels were o
     - "in fact such a winter has never been known before and I suppose has kept in our Tripoline friends" 
 
 - BW2:18: Lt. [John Shaw]() bullies the Neapolitan authorities into letting him into the harbor because the weather is so poor that he feels his ship will be broken up if it can't get into the harbor (11 January 1802)
+
+- BW2:79: [USS *Constellation*]() unable to get over the bar at New Castle because of bad weather; delayed by several days and lost cables and anchor
