--- a/Weather.page
+++ b/Weather.page
@@ -6,3 +6,4 @@ Weather was a significant factor in whether or not American naval vessels were o
 - BW2:18: Lt. [John Shaw]() bullies the Neapolitan authorities into letting him into the harbor because the weather is so poor that he feels his ship will be broken up if it can't get into the harbor (11 January 1802)
 
 - BW2:79: [USS *Constellation*]() unable to get over the bar at New Castle because of bad weather; delayed by several days and lost cables and anchor
+    - [Alexander Murray]() writes that the bad weather has also caused 50 men to be on the sick list because of exposure to the cold and wet, with 2 dead
