--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -7,3 +7,7 @@ One of the major difficulties the navy faced in the Mediterranean was the fact t
 
 - BW1:588: [Secretary of the Navy]() to [Daniel McNeill](), 1 October 1801: "Not knowing whether you may find the Barbary powers in a State of hostility with us or not, I cannot here prescribe the duration of your  Cruise. If you should find Captain Dale, you will obey his Instructions on this Subject: otherwise you must determine for yourself, considering, should it be indispensably necessary that you have liberty to stay till the latest period for which your Crew is entered, which however, I cannot suppose will be necessary." 
 - BW2:29: General orders of conduct given to the navy by President [Thomas Jefferson](), January 1802
+- 
+
+### Getting people to go to the Med
+- BW2:83: [Thomas Truxtun]() declined to take command of the squadron unless he had a captain to sail his ship, and he could function as the commodore only; the secretary of the navy rejected his request, citing the naval officers' reduction of 1801
