--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -23,3 +23,14 @@ Passports were a sticking point between the USA and all of the Barbary regencies
 ## Morocco
 - Morocco also wants to do something about the ships blockaded at Gibraltar. The Emperor of Morocco requested that the ships be given a passport to go home. [Richard Dale]() writes to [James Simpson]() in response: "You will please to Inform the Governor of Tangier, that the U.S. did not make war against the Bey of Tripoli; the Bey of Tripoli made war against the U.S. without any caus what ever on the part of the United States it is the wish of the President, to be at peace, and in friendship, with all nations, But as the Bey of Tripoli has made war without any cause, it is my duty, to take and detain his corsairs where ever I find them, nor do I think the good Since of His Highness the Emperor of Morocco, will permitt him to think that I have done wrong in so doing" (BW2:78, 4 March 1802)
 - [Richard Dale]() is still concerned about Morocco, though: he writes to [James Simpson]() that he should see the emperor of Morocco personally in order to "do away if possible those unjust Ideas that the Tripoline Ambassador has empressed on his mind, in favour of his Master, to the prejudice of the United States, ... it appears to me that the Emperor is desided in taking part with the Bey of Tripoli, how far he intends to go I cannot tell, it is very much, to be dreaded, his going to war with the United States, he can do us more Injury than all the other powers put together, therefore we must do every thing we can to keep peace with him" (BW2:81)
+- 
+
+## Tunis
+- List of presents to the bey of Tunis:
+    - A gun mounted with a golden barrel and a mahogany crimson-velvet-lined case (L525)
+    - Diamonds and emeralds for the gun (L345)
+    - Pair of pistols, golden, with mahogany crimson-velvet-lined case (L525)
+    - Diamonds and emeralds for the pistols (L212)
+    - 5 mounted guns with embossing, etc., with mahogany crimson-velvet-lined case (L2100)
+    - (List provided by [Rufus King](), 15 March 1802, BW2:86)
+
