--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -32,5 +32,6 @@ Passports were a sticking point between the USA and all of the Barbary regencies
     - Pair of pistols, golden, with mahogany crimson-velvet-lined case (L525)
     - Diamonds and emeralds for the pistols (L212)
     - 5 mounted guns with embossing, etc., with mahogany crimson-velvet-lined case (L2100)
+    - 5 Pairs of golden pistols, etc. (L2100)
     - (List provided by [Rufus King](), 15 March 1802, BW2:86)
 
