--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -25,4 +25,5 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW1:640: At the end of cruise 1, the store ship *James* takes stores from the USA to the Mediterranean, but the homeward bound ships have to deposit any extra stores with [John Gavino]() at Gibraltar to disperse amongst the ships that are staying (15 December 1801) 
 - BW1:644: [USS *Essex*]() gets vegetables from shore at Algeciras, 21 December 1801
 - BW2:24: [Richard Dale]() suggests that the [USS *Philadelphia*]() stop for supplies at Leghorn before coming back to the USA, 18 January 1802
-- BW2:26 Dale says that [Daniel McNeill]() should be able to get supplies from the British agent (uncertain at what port), 18 January 1802
+- BW2:26: Dale says that [Daniel McNeill]() should be able to get supplies from the British agent (uncertain at what port), 18 January 1802
+- BW2:87: [Stephen Cathalan]() supplies [USS *George Washington*]() at Marseilles in Feburary 1802
