--- a/Sweden.page
+++ b/Sweden.page
@@ -5,5 +5,6 @@
 - BW1:627: Continued agreeable relations between the [USS Essex]() and the Thetis, 30 November 1801
 - BW2:20: [Richard Dale]() expects to consult with Admiral [Soderstrom]() about the best way to jointly protect the two nations’ commerce, 13 January 1802
 - BW2:28: Soderstrom reports that he has ordered a frigate to Tripoli and is also going there himself; he has put two frigates on convoy duty at Malaga (25 January 1802)
-- BW2:46: Dale writes to Soderstrom that he has ordered the USS Boston to act in conjunction with the Swedes off Tripoli, and he offers some advice to Soderstrom about how an attack might be made on the port, 2 February 1802
+- BW2:46: Dale writes to Soderstrom that he has ordered the [USS Boston]() to act in conjunction with the Swedes off Tripoli, and he offers some advice to Soderstrom about how an attack might be made on the port, 2 February 1802
     - Note: Dale does not say that the USA will participate in an attack, as he has not been given orders that allow him to attack a port (BW2:54)
+- BW2:92: [James Simpson]() does not feel the need to attend the Moroccan emperor personally, stating that Mr. Wyk from the Swedish mission can accomplish the task better than Simpson could, and that they had discussed the strategy between themselves (19 March 1802)
