--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -50,6 +50,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - Mahon: Governor of Mahon assures [Richard Dale]() that if there were corsairs fitting out at Mahon to capture Americans, he would certainly put a stop to it, and that he would ensure that a ship being built for the Bey of Tunis was not actually for Tripoli (BW1:634)
 - Malta: [Samuel Barron]() receives a favorable reception from [Lord Keith]() and the British officers at Malta
 - Gibraltar: [William Bainbridge]() and [Richard Dale]() visit Sir [James Saumarez](), 27 February 1802 (BW2:68)
+    - Bainbridge visits again, 24 March 1802 (BW2:96)
 - [Richard Dale]() writes that he has been treated "with every mark of attention" by all the British officers and diplomats he has met (BW2:70)
 
 ## Naples
