--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -2,3 +2,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
 
 - 7 December 1801: [USS President]() runs into a rock at Port Mahon; [Richard Dale]()'s assessment: "It is out of my power at present to say how long I shall remain here, therefore cannot say when you may expect to see me" (BW1:629)
 - [Stephen Cathalan]() reports that the best place in the Mediterranean to get ship repairs done is Toulon: "there all kinds of Conveniences are to be found" (BW2:87)
+- 
+
+### To persons
+- A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802)
