--- a/Strategy.page
+++ b/Strategy.page
@@ -16,6 +16,8 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 
 ## Cruise 2: 1802
 - Secretary of the navy solidifies the blockade strategy: "The most effectual plan for accomplishing the great object of maintaining a Squadron in the Mediterranean, which is the protection of our commerce, will be to keep the enemy in Port by blockading the places out of which they issue. Convoy must be given to our vessels as far as it can be done consistently with this object. - Whenever it is convenient to convoy, it will be proper that as many vessels as possible be collected, & not by affording convoy to the smaller part of our Commerce, expose the greater part to capture" (BW2:61, 18 February 1802)
+- Still unable to give clear instructions about where the squadron should be: "I shall not point out to you the ground you are to occupy in the execution of these instructions. Circumstances may arise to induce a frequent change in your position and we have a perfect confidence that you will provide judiciously against every movement of the enemy. It is presumed that you will be enabled with the force thus committed to your direction, to afford the most complete protection to our commerce. Our Merchants will look to your vigilance and ability, for the protection of their property and adventure it with the utmost confidence of security" (SecNav to [Richard Valentine Morris](), 1 April 1802. BW2:100)
+- 
 
 
 # Blockade
