--- a/Cruises.page
+++ b/Cruises.page
@@ -3,5 +3,10 @@
 
 ## Cruise 2
 
-#### Commodore: Richard Valentine Morris
+Commodore: Richard Valentine Morris
+
 #### Ships
+- [USS *Chesapeake*](): [Richard Valentine Morris]()
+- [USS *Constellation*](): [Alexander Murray]()
+- [USS *Adams*](): [Edward Preble]()
+- [USS *Enterprize*](): [Andrew Sterett]()
