--- a/Science.page
+++ b/Science.page
@@ -19,6 +19,8 @@
     - Around this same time, all the frigates had large sick lists: around 100 on *President*, 80 on *Essex*, and 70 on *Philadelphia* (BW1:634)
 - BW2:11: [Alexander Murray]() notes that sailors who live "irregular lives while on shore" often end up on the doctor's list and stay there for a long time if their diet does not improve (1 January 1802)
 - BW2:15: [Samuel Barron]() in [USS *Philadelphia*]() arrived in Malta, 25 December 1801, with several officers and 50 men sick with pleurisies and scurvy (could not leave until the 20 men in hospital were well again)
+- BW2:102: [USS *Constellation*]() loses three men before even making it to the Mediterranean: 2 from small pox and one from a "violent Cold" (1 April 1802)
+
     
 # Quarantine
 ## [Regulations about quarantine]()
