--- a/Role of religion.page
+++ b/Role of religion.page
@@ -1,5 +1,6 @@
 ## Using religion as ulterior motive
 - BW1:3: [Richard O'Brien]() to [Thomas Jefferson](), 8 June 1786: "it is the policy of Christian nations to keep those nations of Turks & Moors at war with other Christian Nations. and the people in general here wish for a war with those nations in the streights, for I am sure that nothing but so great a sum as the Spaniards are to give would reconcile those people to the Spaniards, they having such an inveteracy against them for persecuting the Mahometan religion - but money is the God of Algiers & Mahomet their prophet."
+- BW2:105: The bey of Tunis ostensibly declines to allow American ships to reprovision at Tunis because it is "a Violation of the laws of the Profet to provision the enemy of a Mahometan"; [William Eaton]() avers that it's actually because he refused to grant passports to the Tunisian vessels to go to Tripoli.
 
 ## Use of terminology
 - "Christian" appears to be simply a designation for non-Barbary --- "Christian nations," etc., with more of a broad cultural connection than a specifically religious one
