sell the George Washington

--- a/USS George Washington.page
+++ b/USS George Washington.page
@@ -7,3 +7,4 @@
 - Arrived in Algiers 17 September 1800
 
 - 31 July 1801: Ordered to Mediterranean to convoy [*Peace and Plenty*]() to either Algiers or Tunis (BW1:535)
+- April 1802: SecNav orders the GW to be sold
