--- a/USS President.page
+++ b/USS President.page
@@ -4,3 +4,4 @@
 - Arrived Tunis 17 July 1801 (BW1:521)
 - 
 - Ordered to be laid up in ordinary, 14 December 1801 (BW1:638)
+- Returns to Hampton Roads, VA, 14 April 1802 (BW2:115)
