Treaty of Amiens

--- a/James Saumerez.page
+++ b/James Saumerez.page
@@ -1,1 +1,2 @@
 - BW1:519: John Gavino asked Saumerez to delay Tripolitan cruisers in Gibraltar for 24 hours so American merchants could get out safely (Saumerez seems to have agreed to do so), 18 July 1801
+- BW2:116: Saumerez with 4 ships of the line and several frigates waited at Gibraltar till the "definitive treaty" [Treaty of Amiens] was signed; [Richard Dale]() encountered them at Gibraltar, late February 1802
