--- a/People.page
+++ b/People.page
@@ -24,12 +24,14 @@
 - [Count D'Expilly]()
 
 ## Great Britain
+- [Lord Elgin]()
+- [Lord Keith]()
 - [Charles Logie]()
 - [Perkens Magra]()
 - [Bryan McDonogh]()
-- [Lord Elgin]()
 - [Henry Patu]()
 - [James Saumerez]()
+
 
 
 ## Sweden
