--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -52,6 +52,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - Gibraltar: [William Bainbridge]() and [Richard Dale]() visit Sir [James Saumarez](), 27 February 1802 (BW2:68)
     - Bainbridge visits again, 24 March 1802 (BW2:96)
 - [Richard Dale]() writes that he has been treated "with every mark of attention" by all the British officers and diplomats he has met (BW2:70)
+- [Richard Dale]() receives information from Sir [James Saumarez]() about pirates in Gibraltar Bay--the two seem to be on good terms (BW2:116)
 
 ## Naples
 - Lt. [John Shaw]() reports that Naples wants to make a treaty with the USA, and that the governor of Naples has given orders to accommodate the American navy in any way possible, 9 February 1802 (BW2:57)
