--- a/USS Essex.page
+++ b/USS Essex.page
@@ -2,3 +2,4 @@
 - 4 July 1801: Ordered to Tunis with a convoy and stores for the bey (BW1:500)
 - 17 July 1801: Ordered to Barcelona to convoy American merchants down the Mediterranean (BW1:515)
 - 25 October 1801: Ordered to stay near Gibraltar to continue to hold the two Tripolitan corsair vessels in port, only leaving for short convoy duty if necessary (BW1:605)
+27 February 1802: Goes briefly in search of an actual pirate around Gibraltar Bay; unsuccessful in attempt (BW2:116)
