--- a/Weather.page
+++ b/Weather.page
@@ -7,3 +7,5 @@ Weather was a significant factor in whether or not American naval vessels were o
 
 - BW2:79: [USS *Constellation*]() unable to get over the bar at New Castle because of bad weather; delayed by several days and lost cables and anchor, 7 March 1802
     - [Alexander Murray]() writes that the bad weather has also caused 50 men to be on the sick list because of exposure to the cold and wet, with 2 dead
+    
+- BW2:116: [USS *President*] delayed for at least 10 days in Gibraltar because of headwinds, till 10 March 1802
