--- a/Characteristics of Barbary ships.page
+++ b/Characteristics of Barbary ships.page
@@ -10,3 +10,4 @@
 - Often manned by European dissidents and expatriates
     - "I Suspect many Vagabonds will enter that Service [cruising against American ships] for want of employment in the Privateering line" (BW1:633)
 - In Richard O'Brien's list, he notes the captains of the Algerine vessels: only 3 Algerine; the rest Levantine (BW2:71)
+- BW2:117: [Richard Dale]() laments that if Morocco wanted to put gunships in the straits of Gibraltar, "he will not want for men to go in them as there be a Number of Spanards & French Men, In fact renagadoes of all Nations, always ready to embarck in such a caus," 14 April 1802
