President to Med

--- a/USS President.page
+++ b/USS President.page
@@ -1,5 +1,6 @@
 ## Richard Dale
 - Flagship for first cruise
+- Departed for Mediterranean 1 June 1801 (BW2:118)
 - At Algiers 9 July 1801, departing for Tunis that day (BW1:507)
 - Arrived Tunis 17 July 1801 (BW1:521)
 - 
