departure and return

--- a/USS Essex.page
+++ b/USS Essex.page
@@ -1,5 +1,7 @@
 ## [William Bainbridge]()
+- 1 June 1801: Departed for Mediterranean from Hampton Roads (BW2:117)
 - 4 July 1801: Ordered to Tunis with a convoy and stores for the bey (BW1:500)
 - 17 July 1801: Ordered to Barcelona to convoy American merchants down the Mediterranean (BW1:515)
 - 25 October 1801: Ordered to stay near Gibraltar to continue to hold the two Tripolitan corsair vessels in port, only leaving for short convoy duty if necessary (BW1:605)
-27 February 1802: Goes briefly in search of an actual pirate around Gibraltar Bay; unsuccessful in attempt (BW2:116)
+- 27 February 1802: Goes briefly in search of an actual pirate around Gibraltar Bay; unsuccessful in attempt (BW2:116)
+- August 1802: Returns to Washington and is laid up in ordinary (BW2:117)
